use color on the icon instead category text to prevent low contrast texts

--- a/src/styles/custom-themes.scss
+++ b/src/styles/custom-themes.scss
@@ -225,6 +225,7 @@ $light-theme: mat.define-light-theme(
   color: $color-positive;
 }
 
+.color-neutral,
 .transaction-type-transfer {
   color: $color-neutral;
 }
